Quarkus-based Polaris service runtime (#469)